Prevent displaying black lines at the side of FitViewport elements
So far `FitViewport` elements had a black background. For inline image
, inline video and iframe embed content elements this was only visible
when no file or url had been selected. Still, once media is displayed,
there were still cases where a black line at the edge of the element
became visible against light backgrounds.

We still want to display black backgrounds for empty elements to make
them visible right after creation. We therefore add an `opaque` prop
which can be used by content elements to display a black background if
the element would otherwise be invisible.

REDMINE-19506

--- a/entry_types/scrolled/package/src/frontend/FitViewport.module.css
+++ b/entry_types/scrolled/package/src/frontend/FitViewport.module.css
@@ -13,7 +13,10 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: #000;
+}
+
+.opaque .inner {
+  background-color: #000;
   color: #fff;
 }
 
